# sentiment-lab-financial-news-research

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Gen AI News Algo  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: ci.yml
config/: local_models.yaml  sentiment.yaml  settings.yaml  strategies.yaml  universes.yaml
config/calibration/: openai_v1.yaml
config/experiments/: event_surprise_cache_only.yaml  event_surprise_retrospective.yaml  expectation_adjusted_news_overnight_exploratory_v0.yaml  expectation_adjusted_news_v0.yaml  hybrid_5000.yaml  hybrid_baselines_holdout.yaml  hybrid_calibration_analysis.yaml  hybrid_calibration_run.yaml  hybrid_calibration_select.yaml  hybrid_final_report.yaml  hybrid_local_5000.yaml  hybrid_portfolio_holdout.yaml  hybrid_prediction_devval.yaml  milestone.yaml  (+3 more)
docs/: BENCHMARK_100_EVALUATION.md  EVENT_SURPRISE_CACHE_ONLY_CLOSEOUT.md  EVENT_SURPRISE_RETROSPECTIVE_REPORT.md  EXPECTATION_ADJUSTED_NEWS_PROTOCOL.md  EXPECTATION_ADJUSTED_OVERNIGHT_EXPLORATORY_PROTOCOL.md  EXPECTATION_ADJUSTED_OVERNIGHT_EXPLORATORY_REPORT.md  HYBRID_5000_CLOSEOUT.md  HYBRID_5000_FINAL_REPORT.md  HYBRID_5000_METHODOLOGY.md  IMPLEMENTATION_PLAN.md  MILESTONE_STATUS.md  OPEN_SOURCE_REDESIGN_AUDIT.md  REPOSITORY_AUDIT.md  VALIDATION_250_REPORT.md  WRDS_IBES_EPS_PILOT.md
tests/: conftest.py
tools/: event_surprise_benchmark.py  event_surprise_inference_5000.py  event_surprise_post_completion_cpu.py  event_surprise_qwen_resume_5000.py  hybrid_5000_closeout.py  qwen_then_edgar_handoff.py  run_event_surprise_retrospective.py  run_expectation_adjusted_overnight.py  run_wrds_ibes_eps_pilot.py
(+91 files in other folders)
