[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sentiment-lab"
version = "0.1.0"
description = "Reproducible EODHD-to-OpenAI equity news sentiment research"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Josh Gutierrez" }]
dependencies = [
  "duckdb>=1.1,<2",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "numpy>=1.26,<2.4",
  "openai>=1.60,<3",
  "polars>=1.12,<2",
  "pyarrow>=17,<22",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "pyyaml>=6.0,<7",
  "scipy>=1.13,<2",
  "typer>=0.12,<1",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.12,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.7,<1",
  "types-PyYAML>=6.0",
]

[project.scripts]
sentiment-lab = "sentiment_lab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sentiment_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --disable-warnings --cov=sentiment_lab --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["sentiment_lab"]

[tool.coverage.report]
fail_under = 85
show_missing = true
omit = ["src/sentiment_lab/cli.py"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["sentiment_lab"]
exclude = ["tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["duckdb.*", "scipy.*"]
ignore_missing_imports = true
